--- a/.github/workflows/lcu-github-artifacts-release.yml
+++ b/.github/workflows/lcu-github-artifacts-release.yml
@@ -1,4 +1,4 @@
-name: mcgear/public-web-react
+name: GuerrillaGorilla/mui-auto-dark-mode-carousel
 
 on:
   push:
@@ -11,11 +11,11 @@ permissions: write-all
 env:
   CI: false
   Branches: main
-  MainBranch: mainw
+  MainBranch: main
   NPMRegistry: https://registry.npmjs.org/
-  InstallCommand: npm ci
+  InstallCommand: npm i
   BuildCommand: npm run build
-  Output: ./build
+  Output: ./
 
 jobs:
   build:
@@ -54,7 +54,7 @@ jobs:
         id: package_json_exists
         uses: fathym/file-existence-action@master
         with:
-          files: 'package.json'
+          files: "package.json"
 
       # replace text in package.json for main branch
       - name: replace version text for main branch
@@ -108,7 +108,7 @@ jobs:
           RELEASE_BRANCHES: .*
           WITH_V: false
       - run: echo "New version is ${{ steps.versionBump.outputs.new_tag }}"
-
+      
       # webhook to LowCodeUnit
       - name: Invoke deployment hook
         uses: fathym/workflow-webhook@v2
